--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 (HDpp)FinalSoftwareQuality.zip filter=lfs diff=lfs merge=lfs -text
+HDppFinalSoftwareQuality.zip filter=lfs diff=lfs merge=lfs -text
